# recolecta

./: .gitignore  Pipfile  README.md  pyproject.toml
etc/nginx/: recolecta.sausage.conf
etc/nginx-deprecated/: recolecta.sausage.conf
etc/supervisor/: recolecta.conf
recolectadjango/: db.sqlite3
recolectadjango/core/: constants.py  model_utils.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
recolectadjango/core/migrations/: 0001_initial.py  0002_auto_20200223_1619.py
recolectadjango/hoarding/: admin.py  apps.py  forms.py  models.py
recolectadjango/hoarding/migrations/: 0001_initial.py  0002_auto_20200222_2151.py  0003_item_phone.py  0004_auto_20200222_2300.py  0005_auto_20200222_2329.py
recolectadjango/static/: base.css
recolectadjango/templates/core/: base.html  home.html
